@@ -34,15 +34,7 @@ else {
             <tr>
                 <td align="left" valign="middle" colspan="2">
                     <img src="themes/<?php echo $theme ?>/img/logo.gif" width="153" height="47" alt="Logo" />
-                    <?php
-                    if ($pref_email_address != '')
-                    { ?>
-                        &nbsp;&nbsp;<font class="login"><b><?php echo $pref_email_address ?></b></font>
-                    <?php }
-                    else if (!empty($_SESSION['domain']) && !empty($_SESSION['user'])) 
-                    { ?>
-                        &nbsp;&nbsp;<font class="login"><b><?php echo $_SESSION['user'].'@'.$_SESSION['domain'] ?></b></font>
-                    <?php } ?>
+                    &nbsp;&nbsp;<font class="login"><b><?php echo $pref_email_address ?></b></font>
                 </td>
             </tr>
             <tr>
